--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "pnpm": "7.25.0",
+    "sass": "^1.57.1",
     "typescript": "4.9.4"
   }
 }
