--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "nextjs-template-sky",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
+  "license": "MIT",
   "packageManager": "pnpm@7.25.0",
   "scripts": {
     "prepare": "husky install",
@@ -17,6 +18,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
