--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "pnpm": "7.25.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
