--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "pnpm": "7.25.0",
+    "postcss": "^8.4.21",
+    "postcss-preset-env": "^7.8.3",
     "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
 }
