--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.0",
     "@next/font": "13.1.2",
+    "antd": "^5.1.4",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
