--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "pnpm": "7.25.0",
     "postcss": "^8.4.21",
     "postcss-preset-env": "^7.8.3",
+    "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
