--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "postcss-preset-env": "^7.8.3",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
