--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "lint-staged": "^13.1.0",
     "pnpm": "7.25.0",
     "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
     "postcss-preset-env": "^7.8.3",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
