--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@next/font": "13.1.2",
     "antd": "^5.1.4",
     "axios": "^1.2.2",
+    "dayjs": "^1.11.7",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
