--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "antd": "^5.1.4",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
+    "lodash-es": "^4.17.21",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -61,6 +62,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
