build: update lint-staged config and package config

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prettier",
     "stylelint",
     "commitlint",
-    "lint-staged"
+    "lint-staged",
+    "postcss",
+    "tailwindcss"
   ],
   "author": {
     "name": "skyclouds2001",
