--- a/package.json
+++ b/package.json
@@ -49,13 +49,15 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.0",
     "@next/font": "13.1.2",
+    "@reduxjs/toolkit": "^1.9.1",
     "antd": "^5.1.4",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "lodash-es": "^4.17.21",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
