--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dayjs": "^1.11.7",
     "lodash-es": "^4.17.21",
     "next": "13.1.2",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5"
@@ -68,6 +69,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "18.11.18",
+    "@types/prop-types": "^15.7.5",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "cssnano": "^5.1.14",
