--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lodash-es": "^4.17.21",
     "next": "13.1.2",
     "prop-types": "^15.8.1",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5"
@@ -70,6 +71,7 @@
     "@types/lodash-es": "^4.17.6",
     "@types/node": "18.11.18",
     "@types/prop-types": "^15.7.5",
+    "@types/qs": "^6.9.7",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "cssnano": "^5.1.14",
