--- a/package.json
+++ b/package.json
@@ -64,16 +64,20 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@jest/globals": "^29.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "18.11.18",
     "@types/prop-types": "^15.7.5",
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "cssnano": "^5.1.14",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
@@ -83,6 +87,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
     "pnpm": "7.25.0",
     "postcss": "^8.4.21",
