--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
+    "msw": "^0.49.3",
     "pnpm": "7.25.0",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
