--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^6.0.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "vite": "^4.0.4",
+    "vitest": "^0.27.1"
   }
 }
