--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@vitejs/plugin-react": "^3.0.1",
     "cssnano": "^5.1.14",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
@@ -88,6 +89,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.3",
+    "jsdom": "^21.1.0",
     "lint-staged": "^13.1.0",
     "pnpm": "7.25.0",
     "postcss": "^8.4.21",
