--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -27,13 +27,15 @@ jobs:
       security-events: write
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Install ESLint
-        run: |
-          npm install eslint@8.10.0
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
+      - name: Install Global Dependences
+        run: npm install pnpm -g
+      - name: Install Dependencies
+        run: pnpm install
+      - name: Install Packages
+        run: pnpm install @microsoft/eslint-formatter-sarif@2.1.7
 
       - name: Run ESLint
         run: npx eslint .
@@ -43,7 +45,7 @@ jobs:
           --output-file eslint-results.sarif
         continue-on-error: true
 
-      - name: Upload analysis results to GitHub
+      - name: Upload Analysis Results to GitHub
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: eslint-results.sarif
