--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "npx playwright test",
+    "test:unit": "npx vitest"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -80,6 +82,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
+    "@vitest/ui": "^0.28.1",
     "cssnano": "^5.1.14",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
