--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,11 @@
 name: Playwright Tests
+
 on:
   push:
-    branches: [main, master]
+    branches: ['master']
   pull_request:
-    branches: [main, master]
+    branches: ['master']
+
 jobs:
   test:
     timeout-minutes: 60
@@ -13,13 +15,15 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Install global dependences
+
+      - name: Install Global Dependencies
         run: npm install pnpm@7.25.0 -g
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+      - name: Install Dependencies
+        run: pnpm install
       - name: Install Playwright Browsers
         run: pnpm dlx playwright install --with-deps
-      - name: Run Playwright tests
+
+      - name: Run Playwright Tests
         run: pnpm dlx playwright test
       - uses: actions/upload-artifact@v3
         if: always()
