--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "start": "next start",
     "lint": "next lint",
     "test:e2e": "npx playwright test",
-    "test:unit": "npx vitest"
+    "test:unit": "npx jest"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -81,7 +81,6 @@
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@vitejs/plugin-react": "^3.0.1",
     "@vitest/ui": "^0.28.1",
     "cssnano": "^5.1.14",
     "eslint": "8.32.0",
@@ -93,7 +92,6 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-testing-library": "^5.10.0",
     "husky": "^8.0.3",
-    "jsdom": "^21.1.0",
     "lint-staged": "^13.1.0",
     "pnpm": "7.25.0",
     "postcss": "^8.4.21",
@@ -107,8 +105,6 @@
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^6.0.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4",
-    "vite": "^4.0.4",
-    "vitest": "^0.27.3"
+    "typescript": "4.9.4"
   }
 }
