--- a/package.json
+++ b/package.json
@@ -66,12 +66,14 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@jest/globals": "^29.4.1",
     "@playwright/test": "^1.30.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
@@ -81,18 +83,24 @@
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@vitest/ui": "^0.28.1",
     "cssnano": "^5.1.14",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsdoc": "^39.6.8",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-testing-library": "^5.10.0",
     "husky": "^8.0.3",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.1.0",
+    "msw": "^1.0.0",
     "pnpm": "7.25.0",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
