--- a/package.json
+++ b/package.json
@@ -92,9 +92,12 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsdoc": "^39.6.8",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-playwright": "^0.12.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-security": "^1.7.0",
     "eslint-plugin-testing-library": "^5.10.0",
     "husky": "^8.0.3",
     "jest": "^29.4.1",
