--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@vitest/ui": "^0.28.1",
     "cssnano": "^5.1.14",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
@@ -92,7 +91,9 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsdoc": "^39.6.8",
+    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-markdown": "^3.0.0",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-playwright": "^0.12.0",
     "eslint-plugin-prettier": "^4.2.1",
