--- a/package.json
+++ b/package.json
@@ -107,8 +107,14 @@
     "msw": "^1.0.0",
     "pnpm": "7.25.0",
     "postcss": "^8.4.21",
+    "postcss-html": "^1.5.0",
     "postcss-import": "^15.1.0",
+    "postcss-less": "^6.0.0",
+    "postcss-markdown": "^1.2.0",
     "postcss-preset-env": "^7.8.3",
+    "postcss-sass": "^0.5.0",
+    "postcss-scss": "^4.0.6",
+    "postcss-styl": "^0.12.3",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "stylelint": "^14.16.1",
@@ -116,6 +122,7 @@
     "stylelint-config-recess-order": "^3.1.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^6.0.1",
+    "sugarss": "^4.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
