--- a/package.json
+++ b/package.json
@@ -114,14 +114,15 @@
     "postcss-markdown": "^1.2.0",
     "postcss-preset-env": "^7.8.3",
     "postcss-sass": "^0.5.0",
-    "postcss-scss": "^4.0.6",
     "postcss-styl": "^0.12.3",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-recess-order": "^3.1.0",
     "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-order": "^6.0.1",
     "sugarss": "^4.0.1",
     "tailwindcss": "^3.2.4",
