build: change eslint format download situation

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@jest/globals": "^29.4.1",
+    "@microsoft/eslint-formatter-sarif": "^3.0.0",
     "@playwright/test": "^1.30.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
