--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -22,4 +22,4 @@ jobs:
         run: pnpm install
 
       - name: Run Jest Tests
-        run: npx jest --coverage --updateSnapshot
+        run: pnpm exec jest --coverage --updateSnapshot
