--- a/package.json
+++ b/package.json
@@ -50,17 +50,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@next/font": "13.1.2",
+    "@next/font": "^13.1.6",
     "@reduxjs/toolkit": "^1.9.1",
     "antd": "^5.1.6",
-    "axios": "^1.2.4",
+    "axios": "^1.2.5",
     "dayjs": "^1.11.7",
     "lodash-es": "^4.17.21",
-    "next": "13.1.2",
+    "next": "^13.1.6",
     "prop-types": "^15.8.1",
     "qs": "^6.11.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
@@ -82,17 +82,17 @@
     "@types/node": "18.11.18",
     "@types/prop-types": "^15.7.5",
     "@types/qs": "^6.9.7",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
     "cssnano": "^5.1.14",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
+    "eslint": "^8.32.0",
+    "eslint-config-next": "^13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-jsdoc": "^39.6.8",
+    "eslint-plugin-jsdoc": "^39.6.9",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-markdown": "^3.0.0",
@@ -113,7 +113,7 @@
     "postcss-import": "^15.1.0",
     "postcss-less": "^6.0.0",
     "postcss-markdown": "^1.2.0",
-    "postcss-preset-env": "^7.8.3",
+    "postcss-preset-env": "^8.0.1",
     "postcss-sass": "^0.5.0",
     "postcss-styl": "^0.12.3",
     "prettier": "^2.8.3",
@@ -127,6 +127,6 @@
     "stylelint-order": "^6.0.1",
     "sugarss": "^4.0.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "^4.9.4"
   }
 }
