--- a/package.json
+++ b/package.json
@@ -116,17 +116,20 @@
     "postcss-markdown": "^1.2.0",
     "postcss-preset-env": "^8.0.1",
     "postcss-sass": "^0.5.0",
-    "postcss-styl": "^0.12.3",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "stylelint": "^14.16.1",
+    "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-recess-order": "^3.1.0",
+    "stylelint-config-recommended-less": "^1.0.4",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-config-standard-vue": "^1.0.0",
     "stylelint-order": "^6.0.1",
+    "stylelint-stylus": "^0.17.1",
     "sugarss": "^4.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
